--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html>
 
-<html><head><meta http-equiv="refresh" content="0;http://www.cs.tufts.edu/~mchow/" /></head><body></body></html>
+<html><head><title>Redirecting...</title><meta http-equiv="refresh" content="0;http://www.cs.tufts.edu/~mchow/" /></head><body></body></html>
