Migrating personal website to GitHub

--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
 <!DOCTYPE html>
 
-<html><head><title>Redirecting...</title><meta http-equiv="refresh" content="0;http://www.cs.tufts.edu/~mchow/" /></head><body></body></html>
+<html>
+
+<head>
+<title>H@ck3d</title>
+</head>
+
+<body>
+<h1>H@ck3d</h1>
+</body>
+
+</html>
