Migrating my personal website to GitHub

--- a/index.html
+++ b/index.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
 
 <html>
-
 <head>
-<title>H@ck3d</title>
+<title>Ming Y. Chow</title>
+<meta http-equiv="content-type" content="text/html;charset=iso-8859-1" />
+<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
+<meta name="description" content="Ming Chow's home page: Personal Information; CV; Courses, Publications, and Presentations; Frequently Asked Questions" />
+<meta name="keywords" content="ming chow, computer science, lecturer, game development, web programming, security, tufts university, MBTA" />
+<meta name="robots" content="index,follow" />
+<meta name="google-site-verification" content="NkkfQ8bOtWGA0T3CSg_6ACDZNMWoeVI7nwT-Agt5Lss" />
+<link rel="stylesheet" href="default.css" type="text/css" />
+<link rel="alternate" type="application/rss+xml" href="https://twitter.com/statuses/user_timeline/41035489.rss" />
 </head>
 
 <body>
-<h1>H@ck3d</h1>
-</body>
+<h2>Ming Y. Chow</h2>
+<p>My interests are in Game Development, Web and Mobile Development, and Web Security</p>
+<ul>
+<li><a href="personal.html">Personal Information</a></li>
+<li><a href="cv.pdf">Curriculum Vitae (PDF)</a></li>
+<li><a href="faq.html">Frequently Asked Questions</a></li>
+<li><a href="http://picasaweb.google.com/mchow01/" target="_blank">My Photos</a></li>
+<li><a href="https://github.com/mchow01" target="_blank">My GitHub</a></li>
+<li><a href="http://www.linkedin.com/in/mchow01" target="_blank"><img src="btn_viewmy_160x25.gif" width="160" height="25" alt="View Ming Chow's profile on LinkedIn" /></a></li>
+<li><a href="http://www.twitter.com/tufts_cs_mchow" target="_blank"><img src="follow_me-a.png" width="160" height="27" alt="Follow tufts_cs_mchow on Twitter" /></a></li>
+</ul>
 
+<h3>Courses and Works</h3>
+<ul>
+<li>(Summer 2012, Fall 2012) <a href="/comp/15/">COMP 15: Data Structures</a></li>
+<li>(Fall 2012) <a href="/comp/97">COMP 97: Software Engineering</a></li>
+<li>(Summer 2011, Summer 2012) <a href="/comp/10HS/">COMP 10-HS: Developing Computer &amp; Interactive Media</a></li>
+<li>(Spring 2012) <a href="/comp/150ISW/">COMP 150-ISW: Music Apps for the iPad</a></li>
+<li>(Spring 2012) <a href="/comp/116/">COMP 116: Introduction to Computer Security</a></li>
+<li>(Spring 2012) <a href="/comp/50GD/">COMP 50-GD: Introduction to Game Development</a> (a.k.a., <a href="http://www.prism-magazine.org/summer11/feature_01.cfm" target="_blank">one of the coolest engineering courses in the country</a>)</li>
+<li>(Fall 2011) <a href="/comp/120/">COMP 120: Web Engineering</a></li>
+<li>(August 6, 2011) <a href="https://www.defcon.org/html/links/dc-archives/dc-19-archive.html#Chow" target="_blank">Abusing HTML5 (DEF CON 19, Las Vegas, NV)</a></li>
+<li>(Summer 2011) <a href="/comp/20/">COMP 20: Web Programming</a></li>
+<li><a href="mbta_gmap">Closest MBTA Subway Station and Subway Schedule</a></li>
+</ul>
+
+<hr/>
+<p><a href="mailto:mchow@cs.tufts.edu">mchow@cs.tufts.edu</a></p>
+
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-582953-6");
+pageTracker._trackPageview();
+} catch(err) {}</script>
+</body>
 </html>
