Added target="_blank" to all Tufts CS course links

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
 
 <h3>Courses and Works</h3>
 <ul>
-<li>(Summer 2012, Fall 2012) <a href="http://www.cs.tufts.edu/comp/15/">COMP 15: Data Structures</a></li>
-<li>(Fall 2012) <a href="http://www.cs.tufts.edu/comp/97">COMP 97: Software Engineering</a></li>
-<li>(Summer 2011, Summer 2012) <a href="http://www.cs.tufts.edu/comp/10HS/">COMP 10-HS: Developing Computer &amp; Interactive Media</a></li>
-<li>(Spring 2012) <a href="http://www.cs.tufts.edu/comp/150ISW/">COMP 150-ISW: Music Apps for the iPad</a></li>
-<li>(Spring 2012) <a href="http://www.cs.tufts.edu/comp/116/">COMP 116: Introduction to Computer Security</a></li>
-<li>(Spring 2012) <a href="http://www.cs.tufts.edu/comp/50GD/">COMP 50-GD: Introduction to Game Development</a> (a.k.a., <a href="http://www.prism-magazine.org/summer11/feature_01.cfm" target="_blank">one of the coolest engineering courses in the country</a>)</li>
-<li>(Fall 2011) <a href="http://www.cs.tufts.edu/comp/120/">COMP 120: Web Engineering</a></li>
+<li>(Summer 2012, Fall 2012) <a href="http://www.cs.tufts.edu/comp/15/" target="_blank">COMP 15: Data Structures</a></li>
+<li>(Fall 2012) <a href="http://www.cs.tufts.edu/comp/97" target="_blank">COMP 97: Software Engineering</a></li>
+<li>(Summer 2011, Summer 2012) <a href="http://www.cs.tufts.edu/comp/10HS/" target="_blank">COMP 10-HS: Developing Computer &amp; Interactive Media</a></li>
+<li>(Spring 2012) <a href="http://www.cs.tufts.edu/comp/150ISW/" target="_blank">COMP 150-ISW: Music Apps for the iPad</a></li>
+<li>(Spring 2012) <a href="http://www.cs.tufts.edu/comp/116/" target="_blank">COMP 116: Introduction to Computer Security</a></li>
+<li>(Spring 2012) <a href="http://www.cs.tufts.edu/comp/50GD/" target="_blank">COMP 50-GD: Introduction to Game Development</a> (a.k.a., <a href="http://www.prism-magazine.org/summer11/feature_01.cfm" target="_blank">one of the coolest engineering courses in the country</a>)</li>
+<li>(Fall 2011) <a href="http://www.cs.tufts.edu/comp/120/" target="_blank">COMP 120: Web Engineering</a></li>
 <li>(August 6, 2011) <a href="https://www.defcon.org/html/links/dc-archives/dc-19-archive.html#Chow" target="_blank">Abusing HTML5 (DEF CON 19, Las Vegas, NV)</a></li>
-<li>(Summer 2011) <a href="http://www.cs.tufts.edu/comp/20/">COMP 20: Web Programming</a></li>
+<li>(Summer 2011) <a href="http://www.cs.tufts.edu/comp/20/" target="_blank">COMP 20: Web Programming</a></li>
 <li><a href="mbta_gmap">Closest MBTA Subway Station and Subway Schedule</a></li>
 </ul>
 
