Removed mbta_gmap directory

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <li>(Fall 2011) <a href="http://www.cs.tufts.edu/comp/120/" target="_blank">COMP 120: Web Engineering</a></li>
 <li>(August 6, 2011) <a href="https://www.defcon.org/html/links/dc-archives/dc-19-archive.html#Chow" target="_blank">Abusing HTML5 (DEF CON 19, Las Vegas, NV)</a></li>
 <li>(Summer 2011) <a href="http://www.cs.tufts.edu/comp/20/" target="_blank">COMP 20: Web Programming</a></li>
-<li><a href="mbta_gmap">Closest MBTA Subway Station and Subway Schedule</a></li>
+<li><a href="http://mbtamap.heroku.com" target="_blank">Closest MBTA Subway Station and Subway Schedule</a></li>
 </ul>
 
 <hr/>
