--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <li><a href="personal.html">Personal Information</a></li>
 <li><a href="cv.pdf">Curriculum Vitae (PDF)</a></li>
 <li><a href="faq.html">Frequently Asked Questions</a></li>
-<li><a href="http://picasaweb.google.com/mchow01/" target="_blank">My Photos</a></li>
+<li><a href="https://plus.google.com/photos/108280482398097579955/albums?banner=pwa" target="_blank">My Photos</a></li>
 <li><a href="https://github.com/mchow01" target="_blank">My GitHub</a></li>
 <li><a href="http://www.linkedin.com/in/mchow01" target="_blank"><img src="btn_viewmy_160x25.gif" width="160" height="25" alt="View Ming Chow's profile on LinkedIn" /></a></li>
 <li><a href="http://www.twitter.com/tufts_cs_mchow" target="_blank"><img src="follow_me-a.png" width="160" height="27" alt="Follow tufts_cs_mchow on Twitter" /></a></li>
