--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
 <h3>Courses and Works</h3>
 <ul>
+<li>(Fall 2012, Spring 2013) <a href="http://tuftsdev.github.com/SoftwareEngineering/" target="_blank">COMP 97 and 98: Software Engineering - The Senior Capstone Project</a></li>
 <li>(Summer 2012, Fall 2012) <a href="http://www.cs.tufts.edu/comp/15/" target="_blank">COMP 15: Data Structures</a></li>
-<li>(Fall 2012) <a href="http://www.cs.tufts.edu/comp/97" target="_blank">COMP 97: Software Engineering</a></li>
 <li>(Summer 2011, Summer 2012) <a href="http://www.cs.tufts.edu/comp/10HS/" target="_blank">COMP 10-HS: Developing Computer &amp; Interactive Media</a></li>
 <li>(Spring 2012) <a href="http://www.cs.tufts.edu/comp/150ISW/" target="_blank">COMP 150-ISW: Music Apps for the iPad</a></li>
 <li>(Spring 2012) <a href="http://www.cs.tufts.edu/comp/116/" target="_blank">COMP 116: Introduction to Computer Security</a></li>
