Added reminders presentation powered by impress.js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="ming chow, computer science, lecturer, game development, web programming, security, tufts university, MBTA" />
 <meta name="robots" content="index,follow" />
 <meta name="google-site-verification" content="NkkfQ8bOtWGA0T3CSg_6ACDZNMWoeVI7nwT-Agt5Lss" />
-<link rel="stylesheet" href="default.css" type="text/css" />
+<link rel="stylesheet" href="css/default.css" type="text/css" />
 <link rel="alternate" type="application/rss+xml" href="https://twitter.com/statuses/user_timeline/41035489.rss" />
 </head>
 
@@ -26,8 +26,8 @@
 <li><a href="http://tuftsdev.github.com/" target="_blank">Code and examples for all my courses in the Department of Computer Science at Tufts University</a></li>
 </ul>
 </li>
-<li><a href="http://www.linkedin.com/in/mchow01" target="_blank"><img src="btn_viewmy_160x25.gif" width="160" height="25" alt="View Ming Chow's profile on LinkedIn" /></a></li>
-<li><a href="http://www.twitter.com/tufts_cs_mchow" target="_blank"><img src="follow_me-a.png" width="160" height="27" alt="Follow tufts_cs_mchow on Twitter" /></a></li>
+<li><a href="http://www.linkedin.com/in/mchow01" target="_blank"><img src="images/btn_viewmy_160x25.gif" width="160" height="25" alt="View Ming Chow's profile on LinkedIn" /></a></li>
+<li><a href="http://www.twitter.com/tufts_cs_mchow" target="_blank"><img src="images/follow_me-a.png" width="160" height="27" alt="Follow tufts_cs_mchow on Twitter" /></a></li>
 </ul>
 
 <h3>Courses and Works</h3>
