--- a/personal.html
+++ b/personal.html
@@ -9,7 +9,7 @@
 <meta name="description" content="Ming Chow's home page: Personal Information; CV; Courses, Publications, and Presentations; Frequently Asked Questions" />
 <meta name="keywords" content="ming chow, computer science, lecturer, game development, web programming, security, tufts university, MBTA" />
 <meta name="robots" content="index,follow" />
-<link rel="stylesheet" href="default.css" type="text/css" />
+<link rel="stylesheet" href="css/default.css" type="text/css" />
 <link rel="alternate" type="application/rss+xml" href="https://twitter.com/statuses/user_timeline/41035489.rss" />
 </head>
 
