--- a/faq.html
+++ b/faq.html
@@ -25,22 +25,22 @@
 <p>I am flattered, yet uncomfortable when students me "professor" because it makes me feel a lot older, and I do not have a Ph.D.  I also hate it when people call me "Mr. Chow" because that is my dad.  So just call me Ming.</p>
 
 <h4>Can I be your student?</h4>
-<p>Sure, but I hope that you are energetic and creative.</p>
+<p>Yes by taking one of my classes.</p>
 
 <h4>Can you be my advisor?</h4>
-<p>Yes.</p>
+<p>Yes but I can only advise students in the School of Engineering.</p>
 
 <h4>What was the best academic advice that you have ever received?</h4>
 <p>Professor Rob Jacob told me that I cannot have too many interests, and that I need find one or two areas of focus: it is far more valuable to do a few big and outstanding projects, than to do many quick and divergent projects.  That was the most valuable academic advice that I have ever received.</p>
 
 <h4>Why did you decide to teach at a college level?</h4>
-<p>In short, to give back to my alma mater.</p>
+<p>In short, to give back to my alma mater and to bridge the gap between academialand and the real world.</p>
 
 <h4>What do you cherish most from your teaching experiences at Tufts?</h4>
 <p>The long-term relationship that I have with many of my former students.  I also like to see them do well in life, and many have.  I am proud to have them as former students.  Many have asked me for letters of recommendation, references, and help with r&eacute;sum&eacute;s and cover letters.</p>
 
 <h4>Were you born in this country?</h4>
-<p>Yes, I was born in Boston, MA.  My parents were born in China/Hong Kong, and I am the first one in my family to go to college.</p>
+<p>Yes, I was born in Boston, MA.  My parents were born in China / Hong Kong, and I am the first one in my family to go to college.</p>
 
 <h4>What do you remember most about Tufts, the undergraduate and graduate days?</h4>
 <p>Six unbelievable years that I certainly would not mind reliving again.  I felt like living in the center of the world.  It was a very healthy atmosphere.  Wonderful neighborhood (Medford/Somerville); very close to Boston, Cambridge, and everything that you would ever need in life.  Tufts was essentially a learning playground: academically and socially.  That is still the paradigm of the Computer Science department there --a place to play.  The schoolwork (a la busywork) was only a small part of the Tufts experience.  The opportunities to think and learn how to live a life (on your own) made the Tufts experience worth every penny.</p>
@@ -58,7 +58,7 @@
 <p>No.  Maybe that's a good thing because I don't have to live under anyone's shadow.</p>
 
 <h4>Why do you call Washington, D.C. "The Promised Land"?</h4>
-<p>It is a very special place for me and I have many fond memories there.  My first trip to D.C. was back in 2004 with my friend Rob who was getting ready to pursue his Masters in Forensics Science at The George Washington University.  I was in awe with D.C. when we stepped out of the Metro and saw Watergate.  We did the entire tour of D.C. including visiting a few of the Smithsonian Museums in one day.  A year later, I returned to D.C. for a conference, and took Rob out to dinner at Smith &amp; Wollensky where he broke the news to me that he was ready to propose to his longtime girlfriend Candice.  <a href="https://picasaweb.google.com/108280482398097579955/FatherSDayTripToVirginiaDC" target="_blank">Three years later (2008)</a>, his nephew and I spent an incredible Father's Day weekend with him and his family.  We also saw Tiger on the verge of winning his 14th U.S. Open in prime time on TV.  <a href="https://picasaweb.google.com/108280482398097579955/2009NCAAFrozenFourWashingtonDCVirginia" target="_blank">A year later (2009)</a>, I will forever call D.C. "The Promised Land" when I saw BU win its fifth NCAA Ice Hockey National Championship at the Verizon Center.  The day after was Easter and The Masters and I will never forget the wonderful meal Candice cooked.  <a href="https://picasaweb.google.com/108280482398097579955/ReturnToThePromisedLand" target="_blank">A year later (2010)</a>, I returned to "The Promised Land" with a group of students for the Microsoft Imagine Cup Game Design Competition US Finals.</p>
+<p>It is a very special place for me and I have many fond memories there.  My first trip to D.C. was back in 2004 with my friend Rob who was getting ready to pursue his Masters in Forensics Science at The George Washington University.  I was in awe with D.C. when we stepped out of the Metro and saw Watergate.  We did the entire tour of D.C. including visiting a few of the Smithsonian Museums in one day.  A year later, I returned to D.C. for a conference, and took Rob out to dinner at Smith &amp; Wollensky where he broke the news to me that he was ready to propose to his longtime girlfriend Candice.  <a href="https://plus.google.com/photos/108280482398097579955/albums/5212645831375286225?banner=pwa" target="_blank">Three years later (2008)</a>, his nephew and I spent an incredible Father's Day weekend with him and his family.  We also saw Tiger on the verge of winning his 14th U.S. Open in prime time on TV.  <a href="https://plus.google.com/photos/108280482398097579955/albums/5324223615864301761?banner=pwa" target="_blank">A year later (2009)</a>, I will forever call D.C. "The Promised Land" when I saw BU win its fifth NCAA Ice Hockey National Championship at the Verizon Center.  The day after was Easter and The Masters and I will never forget the wonderful meal Candice cooked.  <a href="https://plus.google.com/photos/108280482398097579955/albums/5464630594509036657?banner=pwa" target="_blank">A year later (2010)</a>, I returned to "The Promised Land" with a group of students for the Microsoft Imagine Cup Game Design Competition US Finals.</p>
 
 <h4>What advice do you have for me?</h4>
 <p>Keep it simple stupid.  And do it right the first time.</p>
