Removed link to Instagram

--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
 <li><a href="personal.html">Personal Information</a></li>
 <li><a href="cv.pdf">Curriculum Vitae (PDF)</a></li>
 <li><a href="faq.html">Frequently Asked Questions</a></li>
-<li>My Photos
-<ul>
-<li><a href="https://plus.google.com/photos/108280482398097579955/albums?banner=pwa" target="_blank">On Google+</a></li>
-<li><a href="http://instagram.com/tufts_cs_mchow" target="_blank">On Instagram</a></li>
-</ul>
-</li>
+<li><a href="https://plus.google.com/photos/108280482398097579955/albums?banner=pwa" target="_blank">My Photos</a></li>
 <li><a href="https://github.com/mchow01" target="_blank">My GitHub</a>
 <ul>
 <li><a href="http://tuftsdev.github.com/" target="_blank">Code and examples for all my courses in the Department of Computer Science at Tufts University</a></li>
