--- a/faq.html
+++ b/faq.html
@@ -63,6 +63,33 @@
 <h4>What advice do you have for me?</h4>
 <p>Keep it simple stupid.  And do it right the first time.</p>
 
+<h4 id="jobs">Can you tell me where your students took jobs at after graduation?</h4>
+<p>Sure, this is pretty easy for me to do.  For one, I keep in contact with many of them and I also maintain the <a href="https://www.linkedin.com/groups/Tufts-University-Computer-Science-Alumni-3728282/about" target="_blank">Tufts University Computer Science Alumni Group on LinkedIn</a>.  So here is a list of some of the companies where my students have took jobs at (note: names withheld for obvious reasons):</p>
+<ul>
+<li>Amazon</li>
+<li>Apple</li>
+<li>Bloomberg</li>
+<li>BoardVantage</li>
+<li>Box</li>
+<li>Cigital</li>
+<li>Evernote</li>
+<li>Galatea Associates</li>
+<li>Google</li>
+<li>InterSystems</li>
+<li>JumpOffCampus (this company was started in my Web Engineering class in Spring 2010)</li>
+<li>Microsoft</li>
+<li>MIT Lincoln Laboratory</li>
+<li>MojoTech</li>
+<li>Palantir</li>
+<li>Pegasystems</li>
+<li>PopCap Games</li>
+<li>Pubget</li>
+<li>Rockstar Games</li>
+<li>TripAdvisor</li>
+<li>Turbine / WB Games</li>
+<li>Vlingo (now Nuance)</li>
+</ul>
+
 <hr/>
 <p><a href="mailto:mchow@cs.tufts.edu">mchow@cs.tufts.edu</a></p>
 
