--- a/omfgdogs/index.html
+++ b/omfgdogs/index.html
@@ -1,1 +1,19 @@
-<!DOCTYPE html><html><head><title>OMFGDOGS</title><style>body{background-image: url("omfgdogs.gif");background-repeat: repeat;}</style></head></html><body><audio loop autoplay><source src="omfgdogs.mp3" />OMFG! GET A NEW WEB BROWSER!</audio></body></html>
+<!DOCTYPE html>
+
+<html>
+<head>
+<title>OMFGDOGS</title>
+<style>
+body {
+	background-image: url("omfgdogs.gif");
+	background-repeat: repeat;
+}
+</style>
+</head>
+<body>
+<audio preload="auto" loop="loop" autoplay="autoplay">
+	<source src="omfgdogs.mp3" />
+	OMFG! GET A NEW WEB BROWSER!
+</audio>
+</body>
+</html>
