--- a/omfgdogs/index.html
+++ b/omfgdogs/index.html
@@ -15,5 +15,6 @@ body {
 	<source src="omfgdogs.mp3" />
 	OMFG! GET A NEW WEB BROWSER!
 </audio>
+<p><a href="http://www.omfgdogs.com/" target="_blank">The original website</a></p>
 </body>
 </html>
