Changed URL to mbtamap

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <li>(Spring 2012) <a href="http://www.cs.tufts.edu/comp/50GD/" target="_blank">COMP 50-GD: Introduction to Game Development</a> (a.k.a., <a href="http://www.prism-magazine.org/summer11/feature_01.cfm" target="_blank">one of the coolest engineering courses in the country</a>)</li>
 <li>(Fall 2011) <a href="http://www.cs.tufts.edu/comp/120/" target="_blank">COMP 120: Web Engineering</a></li>
 <li>(August 6, 2011) <a href="https://www.defcon.org/html/links/dc-archives/dc-19-archive.html#Chow" target="_blank">Abusing HTML5 (DEF CON 19, Las Vegas, NV)</a></li>
-<li><a href="http://mbtamap-cedar.herokuapp.com" target="_blank">Closest MBTA Subway Station and Subway Schedule</a></li>
+<li><a href="http://mbtamap.herokuapp.com" target="_blank">Closest MBTA Subway Station and Subway Schedule</a></li>
 </ul>
 
 <hr/>
