Added the word Professional to short bio

--- a/personal.html
+++ b/personal.html
@@ -19,7 +19,7 @@
 <h3>Early Life and Education</h3>
 <p>I was born in Boston, Massachusetts. I spent most of my childhood in Medford, MA and later moved to Saugus, MA.  I graduated from Saugus High School in 1998.</p>
 
-<h3>Short Biography</h3>
+<h3>Short Professional Biography</h3>
 <p>Ming Chow is a Lecturer at the Tufts University Department of Computer Science. His areas of work are in web and mobile engineering and web security. He teach courses largely in the undergraduate curriculum including Data Structures (the second course in the major sequence), Web Programming, Music Apps on the iPad, and Introduction to Computer Security.  His course Introduction to Game Development <a href="http://www.prism-magazine.org/summer11/feature_01.cfm" target="_blank">was named one of the nation's coolest engineering courses by the American Society for Engineering Education (ASEE) in 2011</a>. He was also a web application developer for ten years at Harvard University. Ming has spoken at numerous organizations and conferences including the High Technology Crime Investigation Association - New England Chapter (HTCIA-NE), the Massachusetts Office of the Attorney General (AGO), John Hancock, OWASP, InfoSec World (2011 and 2012), DEF CON 19 (2011), the Design Automation Conference (2011), Intel, and the SOURCE Conference (Boston 2013). Ming's projects in information security include building numerous CTF challenges, Internet investigations, HTML5 and JavaScript security, and Android forensics.</p>
 
 <h3>Hobbies</h3>
