--- a/personal.html
+++ b/personal.html
@@ -4,7 +4,7 @@
 
 <head>
 <title>Ming Y. Chow - Personal Information</title>
-<meta http-equiv="content-type" content="text/html;charset=iso-8859-1" />
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
 <meta name="description" content="Ming Chow's home page: Personal Information; CV; Courses, Publications, and Presentations; Frequently Asked Questions" />
 <meta name="keywords" content="ming chow, computer science, lecturer, game development, web programming, security, tufts university, MBTA" />
