Revamped website. New sections: about, courses, projects, talks

--- a/projects.html
+++ b/projects.html
@@ -2,18 +2,20 @@
 
 <html>
 <head>
-<title>Ming Y. Chow</title>
+<title>Ming Y. Chow - Projects</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
-<meta name="description" content="Ming Chow's home page" />
+<meta name="description" content="Ming Chow's home page: projects" />
 <meta name="keywords" content="ming chow, computer science, engineering, game development, web development, security, tufts university, MBTA" />
 <meta name="robots" content="index,follow" />
-<meta name="google-site-verification" content="NkkfQ8bOtWGA0T3CSg_6ACDZNMWoeVI7nwT-Agt5Lss" />
 <link rel="stylesheet" href="css/default.css" type="text/css" />
+<link rel="alternate" type="application/rss+xml" href="https://twitter.com/statuses/user_timeline/41035489.rss" />
 </head>
 
 <body>
-<h2>Ming Y. Chow</h2>
+<h2>Ming Y. Chow - Projects</h2>
+<p>(Since 2006) <a href="http://mbtamap.herokuapp.com" target="_blank">Closest MBTA Subway Station and Subway Schedule</a></p>
+
 <div id="networks">
 <p>
 <a href="https://github.com/mchow01" target="_blank"><img src="images/github.png" alt="GitHub" width="32" height="32" /></a>
@@ -23,7 +25,7 @@
 </p>
 </div>
 <div id="footer">
-<p><a href="about.html">About</a> | <a href="courses.html">Courses @ Tufts</a> | <a href="cv.pdf">CV</a> | <a href="faq.html">FAQ</a> | <a href="projects.html">Projects</a> | <a href="talks/">Talks</a> | <a href="mailto:mchow@cs.tufts.edu">Email</a></p>
+<p><a href="about.html">About</a> | <a href="courses.html">Courses @ Tufts</a> | <a href="cv.pdf">CV</a> | <a href="faq.html">FAQ</a> | Projects | <a href="talks/">Talks</a> | <a href="mailto:mchow@cs.tufts.edu">Email</a></p>
 </div>
 
 <script type="text/javascript">
