--- a/faq.html
+++ b/faq.html
@@ -5,15 +5,15 @@
 <title>Ming Y. Chow - Frequently Asked Questions</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
-<meta name="description" content="Ming Chow's home page: Personal Information; CV; Courses, Publications, and Presentations; Frequently Asked Questions" />
-<meta name="keywords" content="ming chow, computer science, lecturer, game development, web programming, security, tufts university, MBTA" />
+<meta name="description" content="Ming Chow's home page: frequently asked questions" />
+<meta name="keywords" content="ming chow, computer science, engineering, game development, web development, security, tufts university, MBTA" />
 <meta name="robots" content="index,follow" />
 <link rel="stylesheet" href="css/default.css" type="text/css" />
 <link rel="alternate" type="application/rss+xml" href="https://twitter.com/statuses/user_timeline/41035489.rss" />
 </head>
 
 <body>
-<h2>Frequently Asked Questions</h2>
+<h2>Ming Y. Chow - Frequently Asked Questions</h2>
 
 <h4>How did you get in computer security?</h4>
 <p>I took a course on software security with <a href="http://www.cigital.com/~gem/" target="_blank">Gary McGraw</a> at the USENIX Annual Conference in Boston in 2004.  The rest is history.</p>
@@ -90,8 +90,17 @@
 <li>Vlingo (now Nuance)</li>
 </ul>
 
-<hr/>
-<p><a href="mailto:mchow@cs.tufts.edu">mchow@cs.tufts.edu</a></p>
+<div id="networks">
+<p>
+<a href="https://github.com/mchow01" target="_blank"><img src="images/github.png" alt="GitHub" width="32" height="32" /></a>
+<a href="https://plus.google.com/photos/108280482398097579955/albums?banner=pwa" target="_blank"><img src="images/gplus.png" alt="Google+" width="32" height="32" /></a>
+<a href="http://www.linkedin.com/in/mchow01" target="_blank"><img src="images/linkedin.png" alt="LinkedIn" width="38" height="32" /></a>
+<a href="http://www.twitter.com/tufts_cs_mchow" target="_blank"><img src="images/twitter.png" alt="Twitter" width="32" height="32" /></a>
+</p>
+</div>
+<div id="footer">
+<p><a href="about.html">About</a> | <a href="courses.html">Courses @ Tufts</a> | <a href="cv.pdf">CV</a> | FAQ | <a href="projects.html">Projects</a> | <a href="talks/">Talks</a> | <a href="mailto:mchow@cs.tufts.edu">Email</a></p>
+</div>
 
 <script type="text/javascript">
 
