--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+<div id="home">
 <h2>Ming Y. Chow</h2>
 <div id="networks">
 <p>
@@ -24,6 +25,7 @@
 </div>
 <div id="footer">
 <p><a href="about.html">About</a> | <a href="courses.html">Courses @ Tufts</a> | <a href="cv.pdf">CV</a> | <a href="faq.html">FAQ</a> | <a href="projects.html">Projects</a> | <a href="talks/">Talks</a> | <a href="mailto:mchow@cs.tufts.edu">Email</a></p>
+</div>
 </div>
 
 <script type="text/javascript">
