--- a/projects.html
+++ b/projects.html
@@ -19,13 +19,12 @@
 <div id="networks">
 <p>
 <a href="https://github.com/mchow01" target="_blank"><img src="images/github.png" alt="GitHub" width="32" height="32" /></a>
-<a href="https://plus.google.com/photos/108280482398097579955/albums?banner=pwa" target="_blank"><img src="images/gplus.png" alt="Google+" width="32" height="32" /></a>
 <a href="http://www.linkedin.com/in/mchow01" target="_blank"><img src="images/linkedin.png" alt="LinkedIn" width="38" height="32" /></a>
 <a href="http://www.twitter.com/tufts_cs_mchow" target="_blank"><img src="images/twitter.png" alt="Twitter" width="32" height="32" /></a>
 </p>
 </div>
 <div id="footer">
-<p><a href="about.html">About</a> | <a href="courses.html">Courses @ Tufts</a> | <a href="cv.pdf">CV</a> | <a href="faq.html">FAQ</a> | Projects | <a href="talks/">Talks</a> | <a href="mailto:mchow@cs.tufts.edu">Email</a></p>
+<p><a href="about.html">About</a> | <a href="courses.html">Courses @ Tufts</a> | <a href="cv.pdf">CV</a> | <a href="faq.html">FAQ</a> | <a href="https://picasaweb.google.com/mchow01" target="_blank">Photos</a> | Projects | <a href="talks/">Talks</a> | <a href="mailto:mchow@cs.tufts.edu">Email</a></p>
 </div>
 
 <script type="text/javascript">
