--- a/projects.html
+++ b/projects.html
@@ -15,9 +15,7 @@
 <body>
 <h2>Ming Y. Chow - Projects</h2>
 <p>(Since 2006) <a href="http://mbtamap.herokuapp.com" target="_blank">Closest MBTA Subway Station and Subway Schedule</a></p>
-<ul>
-	<li><a href="https://itunes.apple.com/us/app/matransit/id653572142?ls=1&mt=8" target="_blank"><img src="images/badge_ios.png" alt="iOS"/></a></li>
-</ul>
+<blockquote><a href="https://itunes.apple.com/us/app/matransit/id653572142?ls=1&mt=8" target="_blank"><img src="images/badge_ios.png" alt="iOS"/></a></blockquote>
 
 <div id="networks">
 <p>
