--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,10 @@
 <h2>Ming Y. Chow - Projects</h2>
 <p>(Since 2006) <a href="http://mbtamap.herokuapp.com" target="_blank">Closest MBTA Subway Station and Subway Schedule</a></p>
 <blockquote><a href="https://itunes.apple.com/us/app/matransit/id653572142?ls=1&amp;mt=8" target="_blank"><img src="images/badge_ios.png" alt="iOS"/></a> <a href="https://play.google.com/store/apps/details?id=edu.tufts.cs.mchow.matransit" target="_blank"><img src="images/badge_android.png" alt="Android"/></a></blockquote>
+<ul>
+	<li>iOS app source code: <a href="https://github.com/mchow01/MATransit-iOS" target="_blank">https://github.com/mchow01/MATransit-iOS</a></li>
+	<li>Android app source code: <a href="https://github.com/mchow01/MATransit-Android" target="_blank">https://github.com/mchow01/MATransit-Android</a></li>
+</ul>
 
 <div id="networks">
 <p>
