Updated talks page

--- a/talks/index.html
+++ b/talks/index.html
@@ -17,6 +17,8 @@
 
 <p>Mobile Web Security. <a href="http://www.misti.com/default.asp?Page=65&amp;Return=70&amp;ProductID=3563" target="_blank">Mobile &amp; Smart Device Security Conference</a>, Renaissance Boston Waterfront Hotel, Boston, MA, November 19 - 21, 2013.</p>
 
+<p><a href="http://defcon.org/html/defcon-21/dc-21-speakers.html#Chow" target="_blank">Abusing NoSQL Databases</a>. DEF CON 21 Hacking Conference, The Rio All Suite Hotel and Casino, Las Vegas, NV, August 2 - 4, 2013.</p>
+
 <p><a href="SOURCE2013-mchow.pdf">JavaScript Pitfalls</a>. SOURCE Conference Boston 2013, Marriott Tremont, Boston, MA, April 16, 2013.</p>
 
 <p><a href="android_forensics.pdf">Android Forensics</a>. InfoSec World Conference and Expo 2012, Disney's Contemporary Resort, Orlando, FL, April 3, 2012.</p>
