Removed link to photos

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 </p>
 </div>
 <div id="footer">
-<p>About | <a href="courses.html">Courses @ Tufts</a> | <a href="cv.pdf">CV</a> | <a href="faq.html">FAQ</a> | <a href="https://picasaweb.google.com/mchow01" target="_blank">Photos</a> | <a href="projects.html">Projects</a> | <a href="talks/">Talks</a> | <a href="mailto:mchow@cs.tufts.edu">Email</a></p>
+<p>About | <a href="courses.html">Courses @ Tufts</a> | <a href="cv.pdf">CV</a> | <a href="faq.html">FAQ</a> | <a href="projects.html">Projects</a> | <a href="talks/">Talks</a> | <a href="mailto:mchow@cs.tufts.edu">Email</a></p>
 </div>
 
 <script type="text/javascript">
