--- a/talks/index.html
+++ b/talks/index.html
@@ -53,7 +53,7 @@ Use of the Internet in Fraud Investigations
 </p>
 </div>
 <div id="footer">
-<p><a href="../about.html">About</a> | <a href="../courses.html">Courses @ Tufts</a> | <a href="../cv.pdf">CV</a> | <a href="../faq.html">FAQ</a> | <a href="https://picasaweb.google.com/mchow01" target="_blank">Photos</a> | <a href="../projects.html">Projects</a> | Talks | <a href="mailto:mchow@cs.tufts.edu">Email</a></p>
+<p><a href="../about.html">About</a> | <a href="../courses.html">Courses @ Tufts</a> | <a href="../cv.pdf">CV</a> | <a href="../faq.html">FAQ</a> | <a href="../projects.html">Projects</a> | Talks | <a href="mailto:mchow@cs.tufts.edu">Email</a></p>
 </div>
 
 <script type="text/javascript">
