--- a/courses.html
+++ b/courses.html
@@ -79,7 +79,7 @@
 </p>
 </div>
 <div id="footer">
-<p><a href="about.html">About</a> | Courses @ Tufts | <a href="cv.pdf">CV</a> | <a href="faq.html">FAQ</a> | <a href="https://picasaweb.google.com/mchow01" target="_blank">Photos</a> | <a href="projects.html">Projects</a> | <a href="talks/">Talks</a> | <a href="mailto:mchow@cs.tufts.edu">Email</a></p>
+<p><a href="about.html">About</a> | Courses @ Tufts | <a href="cv.pdf">CV</a> | <a href="faq.html">FAQ</a> | <a href="projects.html">Projects</a> | <a href="talks/">Talks</a> | <a href="mailto:mchow@cs.tufts.edu">Email</a></p>
 </div>
 
 <script type="text/javascript">
