--- a/faq.html
+++ b/faq.html
@@ -98,7 +98,7 @@
 </p>
 </div>
 <div id="footer">
-<p><a href="about.html">About</a> | <a href="courses.html">Courses @ Tufts</a> | <a href="cv.pdf">CV</a> | FAQ | <a href="https://picasaweb.google.com/mchow01" target="_blank">Photos</a> | <a href="projects.html">Projects</a> | <a href="talks/">Talks</a> | <a href="mailto:mchow@cs.tufts.edu">Email</a></p>
+<p><a href="about.html">About</a> | <a href="courses.html">Courses @ Tufts</a> | <a href="cv.pdf">CV</a> | FAQ | <a href="projects.html">Projects</a> | <a href="talks/">Talks</a> | <a href="mailto:mchow@cs.tufts.edu">Email</a></p>
 </div>
 
 <script type="text/javascript">
