Published course evaluation (overall) numbers for all my courses since I started teaching at the Department of Computer Science

--- a/courses.html
+++ b/courses.html
@@ -23,52 +23,193 @@
 
 <h3>Spring 2013</h3>
 <ul>
-<li><a href="http://www.cs.tufts.edu/comp/20/" target="_blank">COMP 20: Web Programming</a></li>
-<li><a href="http://www.cs.tufts.edu/comp/98/" target="_blank">COMP 98: Senior Capstone Project II</a></li>
-<li><a href="http://www.cs.tufts.edu/comp/150ISW/" target="_blank">COMP 150-ISW: Music Apps for the iPad</a></li>
+<li><a href="http://www.cs.tufts.edu/comp/20/" target="_blank">COMP 20: Web Programming</a>
+<ul>
+	<li>Enrollment (number of students): 119</li>
+	<li>Overall Course Rating: 3.88 / 5.0</li>
+	<li>Overall Performance of Instructor: 4.05 / 5.0</li>
+</ul>
+</li>
+<li><a href="http://www.cs.tufts.edu/comp/98/" target="_blank">COMP 98: Senior Capstone Project II</a>
+<ul>
+	<li>Enrollment (number of students): 23</li>
+	<li>Overall Course Rating: 3.56 / 5.0</li>
+	<li>Overall Performance of Instructor: 3.78 / 5.0</li>
+</ul>
+</li>
+<li><a href="http://www.cs.tufts.edu/comp/150ISW/" target="_blank">COMP 150-ISW: Music Apps for the iPad</a>
+<ul>
+	<li>Enrollment (number of students): 15</li>
+	<li>Overall Course Rating: 3.25 / 5.0</li>
+	<li>Overall Performance of Instructor: 3.88 / 5.0</li>
+</ul>
+</li>
 </ul>
 
 <h3>Fall 2012</h3>
 <ul>
-<li>COMP 15: Data Structures</li>
-<li>COMP 97: Senior Capstone Project I</li>
+<li>COMP 15: Data Structures
+<ul>
+	<li>Enrollment, Section 1 (number of students): 44</li>
+	<li>Overall Course Rating: 4.10 / 5.0</li>
+	<li>Overall Performance of Instructor: 4.31 / 5.0</li>
+</ul>
+<ul>
+	<li>Enrollment, Section 2 (number of students): 40</li>
+	<li>Overall Course Rating: 4.42 / 5.0</li>
+	<li>Overall Performance of Instructor: 4.52 / 5.0</li>
+</ul>
+
+</li>
+<li>COMP 97: Senior Capstone Project I
+<ul>
+	<li>Enrollment (number of students): 22</li>
+	<li>Overall Course Rating: 2.80 / 5.0</li>
+	<li>Overall Performance of Instructor: 3.10 / 5.0</li>
+</ul>
+</li>
 </ul>
 
 <h3>Spring 2012</h3>
 <ul>
-<li><a href="http://www.cs.tufts.edu/comp/50GD/" target="_blank">COMP 50-GD: Introduction to Game Development</a></li>
-<li>COMP 116: Introduction to Computer Security</li>
-<li>COMP 150-ISW: Music Apps for the iPad</li>
+<li><a href="http://www.cs.tufts.edu/comp/50GD/" target="_blank">COMP 50-GD: Introduction to Game Development</a>
+<ul>
+	<li>Enrollment (number of students): 35</li>
+	<li>Overall Course Rating: 4.0 / 5.0</li>
+	<li>Overall Performance of Instructor: 4.3 / 5.0</li>
+</ul>
+</li>
+<li>COMP 116: Introduction to Computer Security
+<ul>
+	<li>Enrollment (number of students): 23</li>
+	<li>Overall Course Rating: 4.1 / 5.0</li>
+	<li>Overall Performance of Instructor: 3.9 / 5.0</li>
+</ul>
+</li>
+<li>COMP 150-ISW: Music Apps for the iPad
+<ul>
+	<li>Enrollment (number of students): 27</li>
+	<li>Overall Course Rating: 3.9 / 5.0</li>
+	<li>Overall Performance of Instructor: 3.5 / 5.0</li>
+</ul>
+</li>
 </ul>
 
 <h3>Fall 2011</h3>
 <ul>
-<li>COMP 15: Data Structures</li>
-<li>COMP 120: Web Engineering</li>
+<li>COMP 15: Data Structures
+<ul>
+	<li>Enrollment, Section 1 (number of students): 30</li>
+	<li>Overall Course Rating: 4.3 / 5.0</li>
+	<li>Overall Performance of Instructor: 4.2 / 5.0</li>
+</ul>
+<ul>
+	<li>Enrollment, Section 2 (number of students): 19</li>
+	<li>Overall Course Rating: 4.3 / 5.0</li>
+	<li>Overall Performance of Instructor: 4.2 / 5.0</li>
+</ul>
+</li>
+<li>COMP 120: Web Engineering
+<ul>
+	<li>Enrollment (number of students): 15</li>
+	<li>Overall Course Rating: 4.5 / 5.0</li>
+	<li>Overall Performance of Instructor: 4.1 / 5.0</li>
+</ul>
+</li>
 </ul>
 
 <h3>Spring 2011</h3>
 <ul>
-<li>COMP 20: Web Programming</li>
-<li>COMP 116: Introduction to Computer Security</li>
-<li>COMP 120: Web Engineering</li>
+<li>COMP 20: Web Programming
+<ul>
+	<li>Enrollment (number of students): 42</li>
+	<li>Overall Course Rating: 3.8 / 5.0</li>
+	<li>Overall Performance of Instructor: 3.9 / 5.0</li>
+</ul>
+</li>
+<li>COMP 116: Introduction to Computer Security
+<ul>
+	<li>Enrollment (number of students): 27</li>
+	<li>Overall Course Rating: 3.7 / 5.0</li>
+	<li>Overall Performance of Instructor: 3.9 / 5.0</li>
+</ul>
+</li>
+<li>COMP 120: Web Engineering
+<ul>
+	<li>Enrollment (number of students): 29</li>
+	<li>Overall Course Rating: 3.6 / 5.0</li>
+	<li>Overall Performance of Instructor: 3.2 / 5.0</li>
+</ul>
+</li>
 </ul>
 
 <h3>Fall 2010</h3>
 <ul>
-<li>COMP 20: Web Programming (2 sections)</li>
-<li>COMP 50-GD: Introduction to Game Development</li>
+<li>COMP 20: Web Programming (2 sections)
+<ul>
+	<li>Enrollment, Section 1 (number of students): 34</li>
+	<li>Overall Course Rating: 3.8 / 5.0</li>
+	<li>Overall Performance of Instructor: 4.0 / 5.0</li>
+</ul>
+<ul>
+	<li>Enrollment, Section 2 (number of students): 29</li>
+	<li>Overall Course Rating: 4.2 / 5.0</li>
+	<li>Overall Performance of Instructor: 4.2 / 5.0</li>
+</ul>
+</li>
+<li>COMP 50-GD: Introduction to Game Development
+<ul>
+	<li>Enrollment (number of students): 8</li>
+	<li>Overall Course Rating: 4.8 / 5.0</li>
+	<li>Overall Performance of Instructor: 4.6 / 5.0</li>
+</ul>
+</li>
 </ul>
 
 <h3>Spring 2010</h3>
 <ul>
-<li>COMP 50-GD: Introduction to Game Development (2 sections)</li>
-<li>COMP 120: Web Engineering</li>
+<li>COMP 10-GD: Introduction to Game Development (2 sections)
+<ul>
+	<li>Enrollment, Section 1 (number of students): 21</li>
+	<li>Overall Course Rating: 4.3 / 5.0</li>
+	<li>Overall Performance of Instructor: 3.9 / 5.0</li>
+</ul>
+<ul>
+	<li>Enrollment, Section 2 (number of students): 15</li>
+	<li>Overall Course Rating: 4.5 / 5.0</li>
+	<li>Overall Performance of Instructor: 4.2 / 5.0</li>
+</ul>
+<li>COMP 50-GD: Introduction to Game Development (2 sections)
+<ul>
+	<li>Enrollment, Section 1 (number of students): 21</li>
+	<li>Overall Course Rating: 4.0 / 5.0</li>
+	<li>Overall Performance of Instructor: 4.1 / 5.0</li>
+</ul>
+<ul>
+	<li>Enrollment, Section 2 (number of students): 18</li>
+	<li>Overall Course Rating: 4.2 / 5.0</li>
+	<li>Overall Performance of Instructor: 4.1 / 5.0</li>
+</ul>
+
+</li>
+<li>COMP 120: Web Engineering
+<ul>
+	<li>Enrollment (number of students): 23</li>
+	<li>Overall Course Rating: 4.3 / 5.0</li>
+	<li>Overall Performance of Instructor: 4.1 / 5.0</li>
+</ul>
+</li>
 </ul>
 
 <h3>Fall 2009</h3>
 <ul>
-<li>COMP 20: Web Programming</li>
+<li>COMP 20: Web Programming
+<ul>
+	<li>Enrollment (number of students): 11</li>
+	<li>Overall Course Rating: 4.9 / 5.0</li>
+	<li>Overall Performance of Instructor: 4.5 / 5.0</li>
+</ul>
+</li>
 </ul>
 
 <div id="networks">
