Published link to Spring 2012 Introduction to Game Development course on Tufts OCW

--- a/courses.html
+++ b/courses.html
@@ -72,7 +72,7 @@
 
 <h3>Spring 2012</h3>
 <ul>
-<li><a href="http://www.cs.tufts.edu/comp/50GD/" target="_blank">COMP 50-GD: Introduction to Game Development</a>
+<li>COMP 50-GD: Introduction to Game Development <strong>(This course has been donated to Tufts OpenCourseWare: <a href="http://ocw.tufts.edu/Course/75" target="_blank">http://ocw.tufts.edu/Course/75</a>)</strong>
 <ul>
 	<li>Enrollment (number of students): 35</li>
 	<li>Overall Course Rating: 4.0 / 5.0</li>
