Changed Twitter handle

--- a/courses.html
+++ b/courses.html
@@ -216,7 +216,7 @@
 <p>
 <a href="https://github.com/mchow01" target="_blank"><img src="images/github.png" alt="GitHub" width="32" height="32" /></a>
 <a href="http://www.linkedin.com/in/mchow01" target="_blank"><img src="images/linkedin.png" alt="LinkedIn" width="38" height="32" /></a>
-<a href="http://www.twitter.com/tufts_cs_mchow" target="_blank"><img src="images/twitter.png" alt="Twitter" width="32" height="32" /></a>
+<a href="http://www.twitter.com/0xmchow" target="_blank"><img src="images/twitter.png" alt="Twitter" width="32" height="32" /></a>
 </p>
 </div>
 <div id="footer">
