--- a/talks/index.html
+++ b/talks/index.html
@@ -15,7 +15,9 @@
 <body>
 <h2>Ming Y. Chow - Talks</h2>
 
-<p>Mobile Web Security. <a href="http://www.misti.com/default.asp?Page=65&amp;Return=70&amp;ProductID=3563" target="_blank">Mobile &amp; Smart Device Security Conference</a>, Renaissance Boston Waterfront Hotel, Boston, MA, November 19 - 21, 2013.</p>
+<p><a href="MSS13_Session11.pdf">Understanding the Threat Profile of Mobile Apps</a>. Mobile &amp; Smart Device Security Conference, Renaissance Boston Waterfront Hotel, Boston, MA, November 19 - 21, 2013.</p>
+
+<p><a href="MSS13_Session4.pdf">Mobile Web Security</a>. Mobile &amp; Smart Device Security Conference, Renaissance Boston Waterfront Hotel, Boston, MA, November 19 - 21, 2013.</p>
 
 <p><a href="http://defcon.org/html/defcon-21/dc-21-speakers.html#Chow" target="_blank">Abusing NoSQL Databases</a>. DEF CON 21 Hacking Conference, The Rio All Suite Hotel and Casino, Las Vegas, NV, August 2 - 4, 2013.</p>
 
