--- a/courses.html
+++ b/courses.html
@@ -14,6 +14,14 @@
 
 <body>
 <h2>Ming Y. Chow - Courses @ Tufts</h2>
+
+<h3>Spring 2014</h3>
+<ul>
+<li><a href="http://www.cs.tufts.edu/comp/20/" target="_blank">COMP 20: Web Programming</a></li>
+<li><a href="http://www.cs.tufts.edu/comp/23/" target="_blank">COMP 23: Introduction to Game Development</a></li>
+<li><a href="http://www.cs.tufts.edu/comp/98/" target="_blank">COMP 98: Senior Capstone Project II</a></li>
+</ul>
+
 <h3>Fall 2013</h3>
 <ul>
 <li><a href="http://www.cs.tufts.edu/comp/97/" target="_blank">COMP 97: Senior Capstone Project I</a></li>
