--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 <p>I have a deep passion for sports.  I love playing golf and bowling.  I enjoy listening to music.  I particularly like U2, Metallica, and good rock and metal.  I also listen to old and new Asian/Hong Kong tunes.  I love playing video games when I have free time.  I do not often read literary books, but I enjoy reading technical journals and periodicals to keep up with what is going on in the world.</p>
 
 <h3>Favorite Sport Teams</h3>
-<p>I am a season ticket holder to watch the Boston University Terriers (NCAA Division 1 Men's Ice Hockey).  I follow the Miami Hurricanes and the Fighting Irish of Notre Dame in college football.  I follow Manchester United Football Club (England) in international soccer.  I follow the major Boston-based sport teams, particularly the Patriots, Celtics, and Red Sox (in that order) closely.</p>
+<p>I have been following Manchester United F.C. since I was in high school (1995).  Ditto for the Miami Hurricanes and the Fighting Irish of Notre Dame in college football.  I also follow the New England Patriots and the Boston Celtics closely.</p>
 
 <div id="networks">
 <p>
