--- a/talks/index.html
+++ b/talks/index.html
@@ -19,7 +19,7 @@
 
 <p><a href="MSS13_Session4.pdf">Mobile Web Security</a>. Mobile &amp; Smart Device Security Conference, Renaissance Boston Waterfront Hotel, Boston, MA, November 19 - 21, 2013.</p>
 
-<p><a href="https://www.defcon.org/html/links/dc-archives/dc-21-archive.html#Chow" target="_blank">Abusing NoSQL Databases</a>. DEF CON 21 Hacking Conference, The Rio All Suite Hotel and Casino, Las Vegas, NV, August 2 - 4, 2013.</p>
+<p><a href="https://www.defcon.org/html/links/dc-archives/dc-21-archive.html#Chow" target="_blank">Abusing NoSQL Databases</a>. DEF CON 21 Hacking Conference, The Rio All Suite Hotel and Casino, Las Vegas, NV, August 2 - 4, 2013. <iframe width="560" height="315" src="http://www.youtube.com/embed/lcO1BTNh8r8" frameborder="0" allowfullscreen></iframe></p>
 
 <p><a href="SOURCE2013-mchow.pdf">JavaScript Pitfalls</a>. SOURCE Conference Boston 2013, Marriott Tremont, Boston, MA, April 16, 2013.</p>
 
@@ -28,7 +28,7 @@
 <p>Abusing HTML5</p>
 <ul>
 <li>2011 Intel Security Conference, Intel ­ Hillsboro, Hillsboro, OR, November 17, 2011.</li>
-<li><a href="https://www.defcon.org/html/links/dc-archives/dc-19-archive.html#Chow" target="_blank">DEF CON 19 Hacking Conference</a>, The Rio All Suite Hotel and Casino, Las Vegas, NV, August 5 - 7, 2011.</li>
+<li><a href="https://www.defcon.org/html/links/dc-archives/dc-19-archive.html#Chow" target="_blank">DEF CON 19 Hacking Conference</a>, The Rio All Suite Hotel and Casino, Las Vegas, NV, August 5 - 7, 2011. <iframe width="420" height="315" src="http://www.youtube.com/embed/2pvwQ1Och9o" frameborder="0" allowfullscreen></iframe></li>
 <li>InfoSec World Conference and Expo 2011, Disney's Contemporary Resort, Orlando, FL, April 20, 2011.</li>
 </ul>
 
