Updated course evaluation numbers for fall 2013

--- a/courses.html
+++ b/courses.html
@@ -24,9 +24,27 @@
 
 <h3>Fall 2013</h3>
 <ul>
-<li><a href="http://www.cs.tufts.edu/comp/97/" target="_blank">COMP 97: Senior Capstone Project I</a></li>
-<li><a href="http://www.cs.tufts.edu/comp/116/" target="_blank">COMP 116: Introduction to Computer Security</a></li>
-<li><a href="http://www.cs.tufts.edu/comp/120/" target="_blank">COMP 120: Web Engineering</a></li>
+<li><a href="http://www.cs.tufts.edu/comp/97/" target="_blank">COMP 97: Senior Capstone Project I</a>
+<ul>
+	<li>Enrollment (number of students): 17</li>
+	<li>Overall Course Rating (of 5 responses):  3.60 / 5.0</li> <!-- question 5 -->
+	<li>Overall Performance of Instructor (of 5 responses): 3.60 / 5.0</li> <!-- question 15 -->
+</ul>
+</li>
+<li><a href="http://www.cs.tufts.edu/comp/116/" target="_blank">COMP 116: Introduction to Computer Security</a>
+<ul>
+	<li>Enrollment (number of students): 56</li>
+	<li>Overall Course Rating (of 22 responses):  3.95 / 5.0</li>
+	<li>Overall Performance of Instructor (of 22 responses):  3.95 / 5.0</li>
+</ul>
+</li>
+<li><a href="http://www.cs.tufts.edu/comp/120/" target="_blank">COMP 120: Web Engineering</a>
+	<ul>
+	<li>Enrollment (number of students): 37</li>
+	<li>Overall Course Rating (of 15 responses):  3.93 / 5.0</li>
+	<li>Overall Performance of Instructor (of 15 responses):  4.13 / 5.0</li>
+</ul>
+</li>
 </ul>
 
 <h3>Spring 2013</h3>
