--- a/talks/career.html
+++ b/talks/career.html
@@ -95,7 +95,7 @@
 </div>
 
 <div class="step slide" data-x="13500" data-y="-1500">
-<q>The phonecall and the chance</q>
+<q>The phone call and the chance</q>
 </div>
 
 <div class="step slide" data-x="15000" data-y="-1500">
@@ -104,7 +104,7 @@
 	<li>No one said it was easy.</li>
 	<li>Keep knocking on that door, it will eventually open up (or funny things will happen).</li>
 	<li>You can have nice things, you have to earn them.</li>
-	<li>Beware of bright, shiny objects</li>
+	<li>Beware of bright, shiny objects.</li>
 </ul>
 </div>
 
