--- a/talks/index.html
+++ b/talks/index.html
@@ -15,6 +15,8 @@
 <body>
 <h2>Ming Y. Chow - Talks</h2>
 
+<p><a href="http://www.cigital.com/silver-bullet/show-094/" target="_blank">The Silver Bullet Security Podcast with Gary McGraw, Episode 94</a></p>
+
 <p><a href="MSS13_Session11.pdf">Understanding the Threat Profile of Mobile Apps</a>. Mobile &amp; Smart Device Security Conference, Renaissance Boston Waterfront Hotel, Boston, MA, November 19 - 21, 2013.</p>
 
 <p><a href="MSS13_Session4.pdf">Mobile Web Security</a>. Mobile &amp; Smart Device Security Conference, Renaissance Boston Waterfront Hotel, Boston, MA, November 19 - 21, 2013.</p>
