Posted spring 2014 course evaluation numbers

--- a/courses.html
+++ b/courses.html
@@ -17,9 +17,27 @@
 
 <h3>Spring 2014</h3>
 <ul>
-<li><a href="http://www.cs.tufts.edu/comp/20/" target="_blank">COMP 20: Web Programming</a></li>
-<li><a href="http://www.cs.tufts.edu/comp/23/" target="_blank">COMP 23: Introduction to Game Development</a></li>
-<li><a href="http://www.cs.tufts.edu/comp/98/" target="_blank">COMP 98: Senior Capstone Project II</a></li>
+<li><a href="http://www.cs.tufts.edu/comp/20/" target="_blank">COMP 20: Web Programming</a>
+<ul>
+	<li>Enrollment (number of students): 100</li>
+	<li>Overall Course Rating (of 72 responses):  4.42 / 5.0</li> <!-- question 5 -->
+	<li>Overall Performance of Instructor (of 72 responses): 4.47 / 5.0</li> <!-- question 15 -->
+</ul>	
+</li>
+<li><a href="http://www.cs.tufts.edu/comp/23/" target="_blank">COMP 23: Introduction to Game Development</a>
+<ul>
+	<li>Enrollment (number of students): 38</li>
+	<li>Overall Course Rating (of 27 responses):  4.41 / 5.0</li> <!-- question 5 -->
+	<li>Overall Performance of Instructor (of 27 responses): 4.56 / 5.0</li> <!-- question 15 -->
+</ul>	
+</li>
+<li><a href="http://www.cs.tufts.edu/comp/98/" target="_blank">COMP 98: Senior Capstone Project II</a>
+<ul>
+	<li>Enrollment (number of students): 17</li>
+	<li>Overall Course Rating (of 16 responses):   4.19 / 5.0</li> <!-- question 5 -->
+	<li>Overall Performance of Instructor (of 16 responses):  4.62 / 5.0</li> <!-- question 15 -->
+</ul>	
+</li>
 </ul>
 
 <h3>Fall 2013</h3>
